OnboardingV2Minimal/force-app/main/default/objects/Requirement_Field_Group__c/Requirement_Field_Group__c.object-meta.xml
<CustomObject>
    <label>Requirement Field Group</label>
    <nameField>
        <label>Requirement Field Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requirement Field Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>