OnboardingV2Minimal/force-app/main/default/objects/Requirement_Field_Group__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Details about the purpose/content of this field group.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>