OnboardingV2Minimal/force-app/main/default/objects/Requirement_Field_Group__c/fields/Vendor_Program_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Program_Requirement__c</fullName>
    <description>Parent vendor program requirement that owns this field group.</description>
    <label>Vendor Program Requirement</label>
    <referenceTo>Vendor_Program_Requirement__c</referenceTo>
    <relationshipLabel>Requirement Field Groups</relationshipLabel>
    <relationshipName>Requirement_Field_Groups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>